// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers activityReducer should correctly changeFilter 1`] = `
Object {
  "filter": undefined,
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
      "name": "All",
    },
    Object {
      "key": "SENT_ACTIVITY",
      "name": "Sent",
    },
    Object {
      "key": "RECEIVED_ACTIVITY",
      "name": "Received",
    },
    Object {
      "key": "PENDING_ACTIVITY",
      "name": "Pending",
    },
    Object {
      "key": "EXPIRED_ACTIVITY",
      "name": "Expired",
    },
    Object {
      "key": "INTERNAL_ACTIVITY",
      "name": "Internal",
    },
  ],
  "modal": Object {
    "itemId": null,
    "itemType": null,
  },
  "searchText": "",
  "showExpiredRequests": false,
}
`;

exports[`reducers activityReducer should correctly hideActivityModal 1`] = `
Object {
  "filter": "ALL_ACTIVITY",
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
      "name": "All",
    },
    Object {
      "key": "SENT_ACTIVITY",
      "name": "Sent",
    },
    Object {
      "key": "RECEIVED_ACTIVITY",
      "name": "Received",
    },
    Object {
      "key": "PENDING_ACTIVITY",
      "name": "Pending",
    },
    Object {
      "key": "EXPIRED_ACTIVITY",
      "name": "Expired",
    },
    Object {
      "key": "INTERNAL_ACTIVITY",
      "name": "Internal",
    },
  ],
  "modal": Object {
    "itemId": null,
    "itemType": null,
  },
  "searchText": "",
  "showExpiredRequests": false,
}
`;

exports[`reducers activityReducer should correctly showActivityModal 1`] = `
Object {
  "filter": "ALL_ACTIVITY",
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
      "name": "All",
    },
    Object {
      "key": "SENT_ACTIVITY",
      "name": "Sent",
    },
    Object {
      "key": "RECEIVED_ACTIVITY",
      "name": "Received",
    },
    Object {
      "key": "PENDING_ACTIVITY",
      "name": "Pending",
    },
    Object {
      "key": "EXPIRED_ACTIVITY",
      "name": "Expired",
    },
    Object {
      "key": "INTERNAL_ACTIVITY",
      "name": "Internal",
    },
  ],
  "modal": Object {
    "itemId": undefined,
    "itemType": undefined,
  },
  "searchText": "",
  "showExpiredRequests": false,
}
`;

exports[`reducers activityReducer should correctly updateSearchText 1`] = `
Object {
  "filter": "ALL_ACTIVITY",
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
      "name": "All",
    },
    Object {
      "key": "SENT_ACTIVITY",
      "name": "Sent",
    },
    Object {
      "key": "RECEIVED_ACTIVITY",
      "name": "Received",
    },
    Object {
      "key": "PENDING_ACTIVITY",
      "name": "Pending",
    },
    Object {
      "key": "EXPIRED_ACTIVITY",
      "name": "Expired",
    },
    Object {
      "key": "INTERNAL_ACTIVITY",
      "name": "Internal",
    },
  ],
  "modal": Object {
    "itemId": null,
    "itemType": null,
  },
  "searchText": undefined,
  "showExpiredRequests": false,
}
`;
